# 0766171E-E5E9-4015-9B2D-406C64253A86

./: README.md  configure.ac
src/: Makefile.am  calc.c  convert.c  convert.h
tests/: Makefile.am  check_dojo.c
